add new section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </header>
 
     <main>
+        <section class="banner"></section>
         <section class="brands">
             <div class="container">
                 <h2 class="title">How we make brands thrive</h2>
