--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     </header>
 
     <main>
-        <section class="banner"></section>
+        <section class="banner">
+            <h1></h1>
+        </section>
         <section class="brands">
             <div class="container">
                 <h2 class="title">How we make brands thrive</h2>
