--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <h1></h1>
             <h2></h2>
             <p></p>
+            <span></span>
         </section>
         <section class="brands">
             <div class="container">
