--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <h2></h2>
             <p></p>
             <span></span>
+            <img src="" alt="">
         </section>
         <section class="brands">
             <div class="container">
