--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <main>
         <section class="banner">
-            <h1></h1>
+            <h1 class="tt"></h1>
             <h2></h2>
             <p></p>
             <span></span>
